(feature) add file-loader

--- a/src/containers/header/Header.less
+++ b/src/containers/header/Header.less
@@ -1,7 +1,16 @@
 header {
-  height: 100px;
+  min-height: 100px;
 
   button:not(:last-child) {
     border-right: none;
+  }
+
+  div:first-child {
+    display: inline-block;
+
+    img {
+      height: 100px;
+      width: auto;
+    }
   }
 }
