--- a/src/components/button/Button.less
+++ b/src/components/button/Button.less
@@ -8,6 +8,19 @@ button {
   border: 2px solid transparent;
   border-radius: @border-radius;
 
+  a {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    &:visited {
+      color: black;
+    }
+  }
+
   &.default {
     background: @main-white;
     border: 2px solid @main-gray;
