--- a/src/containers/main/Main.less
+++ b/src/containers/main/Main.less
@@ -1,3 +1,17 @@
 main {
-  height: 2000px;
+  display: flex;
+  flex-direction: column;
+
+  .wrapper {
+    display: inline-block;
+    width: 50%;
+
+    &:nth-child(2n) {
+      align-self: flex-end;
+    }
+
+    &:nth-child(2n + 1) {
+      align-self: flex-start;
+    }
+  }
 }
