--- a/src/style.less
+++ b/src/style.less
@@ -13,4 +13,10 @@
     width: 1024px;
     background: @bg-color;
     border-radius: @border-radius;
+
+    background:
+            url(./images/space2.jpg) 0 0 no-repeat,
+            url(./images/space1.jpg) 550px 1250px repeat-x,
+            url(./images/space3.jpg) 0 1150px no-repeat,
+            url(./images/space4.jpg) 0 1900px repeat-x;
 }
