(refractor) - rewrite fonts

--- a/src/components/button/Button.less
+++ b/src/components/button/Button.less
@@ -53,4 +53,15 @@ button {
     }
   }
 
+  &.only-inner {
+    background: transparent;
+    border: none;
+    border-radius: 0;
+    color: @main-black;
+
+    &:hover {
+      background: @main-white;
+      color: gray;
+    }
+  }
 }
