--- a/src/containers/footer/Footer.less
+++ b/src/containers/footer/Footer.less
@@ -1,8 +1,26 @@
 @import "../../styles/variables";
 
 #footer {
-  .footer-btn-to-top {
-    width: 50px;
-    background: transparent;
+  font-size:  1.2em;
+  .flex();
+
+  .wrapper {
+    margin: 0;
+  }
+
+  .follow-us {
+    .flex();
+
+    ul {
+      list-style-type: none;
+
+      li {
+        line-height: 1.5em;
+
+        i {
+          color: @main-indigo;
+        }
+      }
+    }
   }
 }
