--- a/src/style.less
+++ b/src/style.less
@@ -5,6 +5,11 @@
     outline: none;
 }
 
+* {
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
 #app {
     box-sizing: border-box;
 }
@@ -27,4 +32,8 @@ body {
 img {
   height: 100%;
   width: auto;
+}
+
+i {
+  padding: 5px;
 }
