--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -3,7 +3,15 @@
 @main-gray: #dbdbdb;
 @main-white: #fff;
 @bg-color: #f2f2f2;
+@main-indigo: #2a31d3;
+@main-hover-gray: #d4d4d4;
 
 @box-shadow: 1px 1px 4px 2px @main-gray;
 
 @border-radius: 15px;
+
+.flex() {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
