--- a/src/components/Carousel/Carousel.less
+++ b/src/components/Carousel/Carousel.less
@@ -2,8 +2,8 @@
 
 .carousel {
   .flex();
-  margin: 0 60px;
   position: relative;
+  margin: 20px 60px;
 
   .carousel-navigation {
     position: absolute;
@@ -12,6 +12,37 @@
 
     .flex();
     justify-content: space-between;
+  }
+
+  .carousel-radio-box {
+    position: absolute;
+    top: 102%;
+
+    .flex();
+
+    div {
+      input {
+        opacity: 0;
+
+        &:checked + label {
+          border: 8px solid black;
+        }
+      }
+
+      label {
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        border: 5px solid black;
+        cursor: pointer;
+        display: inline-block;
+        background: white;
+
+        &:hover {
+          border: 8px solid black;
+        }
+      }
+    }
   }
 
   .image-box {
@@ -31,6 +62,14 @@
 
     &.from-right-side {
       animation: from-right-side-anim 2s ease-in;
+    }
+
+    &.to-right-side-hide {
+      animation: to-right-side-hide-anim 2s ease-in;
+    }
+
+    &.to-left-side-hide {
+      animation: to-left-side-hide-anim 2s ease-in;
     }
 
     &.opacity-change {
@@ -53,4 +92,14 @@
   0% {position: relative; left: 200px; opacity: 0}
   50% {position: static; left: -200px}
   100% {opacity: 1}
+}
+
+@keyframes to-left-side-hide-anim {
+  0% {opacity: 1}
+  100% {position: relative; left: -200px; opacity: 0}
+}
+
+@keyframes to-right-side-hide-anim {
+  0% {opacity: 1}
+  100% {position: relative; left: -200px; opacity: 0}
 }
