--- a/src/containers/header/Header.less
+++ b/src/containers/header/Header.less
@@ -5,6 +5,7 @@ header {
   background: @main-white;
   box-shadow: @box-shadow;
   border-radius: @border-radius;
+  width: 100%;
 
   .tab-list {
     display: flex;
