--- a/src/style.less
+++ b/src/style.less
@@ -16,8 +16,9 @@
 
 #root {
     margin: 0 auto;
-    width: 1024px;
-    background: @bg-color;
+    max-width: 1024px;
+    min-width: 800px;
+    background: transparent;
     border-radius: @border-radius;
 }
 
