(feature) - start rewriting

--- a/src/components/Carousel/Carousel.less
+++ b/src/components/Carousel/Carousel.less
@@ -20,12 +20,12 @@
 
     button {
       i {
-        color: white;
+        color: @main-black;
       }
 
       &:hover {
         i {
-          color: #0000cc;
+          color: @main-hover-gray;
         }
       }
     }
