--- a/src/components/navigation/Navigation.less
+++ b/src/components/navigation/Navigation.less
@@ -1,18 +1,15 @@
 @import '../../styles/variables.less';
 
-header {
-  min-height: 100px;
-  background: @main-white;
-  box-shadow: @box-shadow;
-  border-radius: @border-radius;
+.nav-wrap {
+  background: transparent;
   width: 100%;
 
   .tab-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 
     button {
-      margin: 10px;
+      margin: 1px;
     }
   }
 
