--- a/src/style.less
+++ b/src/style.less
@@ -23,11 +23,7 @@
 }
 
 body {
-  background:
-          url(./images/space2.jpg) 0 0 no-repeat,
-          url(./images/space1.jpg) 550px 1250px repeat-x,
-          url(./images/space3.jpg) 0 1150px repeat-x,
-          url(./images/space4.jpg) 0 1900px repeat;
+  background: transparent;
 }
 
 img {
