--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,5 +1,6 @@
 @main-black: #1A1C1C;
 @full-black: #000;
+@opacity-black: rgba(0, 0, 0, 0.3);
 @main-gray: #dbdbdb;
 @main-white: #fff;
 @bg-color: #f2f2f2;
