(feature) - add some information

--- a/src/components/button/Button.less
+++ b/src/components/button/Button.less
@@ -82,10 +82,10 @@ button {
     width: 160px;
 
     & > a {
-      color: @opacity-black;
+      color: @main-white;
 
       &:visited {
-        color: @opacity-black;
+        color: @main-white;
       }
     }
 
