--- a/src/style.less
+++ b/src/style.less
@@ -17,13 +17,13 @@
 #root {
     margin: 0 auto;
     max-width: 1024px;
-    min-width: 800px;
+    min-width: 1024px;
     background: transparent;
     border-radius: @border-radius;
 }
 
 body {
-  background: transparent;
+  background: @bg-color;
 }
 
 img {
