--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,9 +1,9 @@
 @main-black: #1A1C1C;
 @full-black: #000;
-@opacity-black: rgba(0, 0, 0, 0.3);
+@opacity-black: rgba(229, 226, 226, 1);
 @main-gray: #dbdbdb;
 @main-white: #fff;
-@bg-color: #f2f2f2;
+@bg-color: @main-black;
 @main-indigo: #2a31d3;
 @main-hover-gray: #d4d4d4;
 
