--- a/src/components/Wrapper/Wrapper.less
+++ b/src/components/Wrapper/Wrapper.less
@@ -6,7 +6,7 @@
   border-radius: @border-radius;
 
   &.default {
-    background: @main-white;
+    background: @main-gray;
     box-shadow: @box-shadow;
 
     &.no-margin {
