--- a/src/containers/main/Main.less
+++ b/src/containers/main/Main.less
@@ -4,7 +4,6 @@ main {
 
   .wrapper {
     display: inline-block;
-    width: 100%;
 
     div {
       img {
@@ -12,6 +11,25 @@ main {
         width: auto;
         margin: 20px;
         float: left;
+      }
+    }
+
+    .first {
+      div {
+        display: flex;
+        align-items: baseline;
+        justify-content: flex-start;
+        margin: 0.5em;
+
+        span {
+          &:first-child {
+            font-size: 20px;
+            font-weight: bold;
+            flex: 1;
+          }
+
+          flex: 3;
+        }
       }
     }
   }
